inline the datatable css and js

--- a/accessibility-assessment-service/app/resources/assets/template.pug
+++ b/accessibility-assessment-service/app/resources/assets/template.pug
@@ -6,8 +6,7 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     title HMRC Accessibility report for #{original.testSuite}
-    style=assets.stylesheet
-    link(rel='stylesheet', href='https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css')
+    style!=assets.stylesheet
   body
     h1 HMRC Accessibility report for #{original.testSuite}
     p Get some help from our latest #[+link('report documentation','')].
@@ -102,13 +101,6 @@ html(lang="en")
                         span.info #{violation.furtherInformation}
     script!=assets.javascript
 
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js')
-    script(src='https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js')
     script.
-        $(document).ready(function() {
-            $('#axe-table').DataTable();
-        });
-    script.
-        $(document).ready(function() {
-            $('#vnu-table').DataTable();
-        });
+      $('#axe-table').DataTable();
+      $('#vnu-table').DataTable();
