Styling * Adding vnu code column to make js function reusable * Removing only css styling to hide column * Adding fix for table width styling that is broken by using dataTables hidden columns (https://datatables.net/examples/basic_init/hidden_columns.html) * Adding classes for table styling via dataTables.net * Adding styling for new dataTables.net filters * Adding js to: - add checkboxes for filters - use dataTables.net functionality to filter table data on checked - hide vnu code column

--- a/accessibility-assessment-service/app/resources/assets/template.pug
+++ b/accessibility-assessment-service/app/resources/assets/template.pug
@@ -43,14 +43,14 @@ html(lang="en")
              a(href="#" + tool.techName)= tool.name
       each tool in tools
         div.revealed-by-tab(id=tool.techName)
-          table(id=tool.techName + '-table').violations
+          table(id=tool.techName + 'Table', class='order-column hover')
             thead
               tr
                 th.path URL Path #[+link('(?)','#url-path')]
                 if tool.techName == 'axe'
                   th.code Code (axe docs) #[+link('(?)','#code-axe-docs')]
                 if tool.techName == 'vnu'
-                  th.hide-column
+                  th
                 th.description Description #[+link('(?)','#description')]
                 th.snippet Snippet #[+link('(?)','#snippet')]
                 th.alert Alert Level #[+link('(?)','#alert-level')]
@@ -70,7 +70,7 @@ html(lang="en")
                         td.code
                           a(href=violation.helpUrl,target='_blank') #{violation.code}
                       if tool.techName == 'vnu'
-                        td.hide-column
+                        td
                       td.description=violation.description
                       td.snippet
                         span.code=violation.snippet
