--- a/accessibility-assessment-service/app/resources/assets/style.scss
+++ b/accessibility-assessment-service/app/resources/assets/style.scss
@@ -49,18 +49,16 @@ body {
   .alert,
   .code,
   .severity {
-    // 32%
     width: 5%;
   }
 
   .path {
-    // 44%
     width: 12%;
   }
 
   .info,
   .snippet {
-    width:((8%*4+12)/2);// 69%
+    width:((8%*4+12)/2);
 
     pre {
       width: auto;
@@ -126,8 +124,7 @@ body {
 
 .filter {
   display: inline-block;
-  margin: 2px 10px;
-  padding-left: 20px;
+  padding-right: 20px;
 }
 
 table {
